# mdxish

./: .gitignore  .gitmodules  db2.json  dune  dune-project  index.html  mdxish.opam  mdxish.opam.template  package-lock.json  package.json
css/: dune  tailwind.config.js  tailwind.in.css
lib/: codeblock.ml  codeblock.mli  dune  notebook.ml  store.ml  topworker.ml
src/: basic.js  db2.pretty.json  dune  index.js  main.ml  omd_brr.ml
src/jsapp/: dune  index.js  main.ml  omd_brr.ml
src/server/: db2.pretty.json  db5.json  dune  html.eml  main.ml
src/server/assets/: dune
