(executable
 (name main)
 (modules main db2_json omd_brr)
 (libraries mdxish astring lwt js_top_worker-client js_of_ocaml-lwt
   js_of_ocaml-tyxml omd code-mirror brr brr.note)
 (modes js)
 (js_of_ocaml
  (javascript_files basic.js))
 (preprocess
  (pps js_of_ocaml-ppx)))

(executable
 (name worker)
 (modules worker)
 (libraries js_top_worker)
 (modes byte)
 (preprocess
  (pps js_of_ocaml-ppx)))

(rule
 (targets worker.js)
 (action
  (run %{bin:js_of_ocaml} --toplevel --pretty +toplevel.js +dynlink.js
    %{dep:worker.bc} -o %{targets})))

(rule
 (targets db2_json.ml)
 (deps
  (:db2 db2.pretty.json))
 (action
  (with-stdout-to
   %{targets}
   (progn
    (echo "let content = {db| ")
    (cat %{db2})
    (echo "|db}")))))

(rule
 (targets index.js)
 (deps main.bc.js)
 (mode promote-until-clean)
 (action
  (progn
   (run npx esbuild --bundle --outfile=index.js main.bc.js))))
